--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.BinasJC_app"
         tools:targetApi="31">
         <activity
+            android:name=".activity_bike_list"
+            android:exported="false" />
+        <activity
             android:name=".activity_dialog_reservation_bike"
             android:exported="false" />
         <activity
