--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.BinasJC_app"
         tools:targetApi="31">
         <activity
+            android:name=".activity_list_chat"
+            android:exported="true" />
+        <activity
             android:name=".activity_chat"
             android:exported="true" />
         <activity
