--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,14 @@
         android:theme="@style/Theme.BinasJC_app"
         tools:targetApi="31">
         <activity
+            android:name=".activity_bike_list"
+            android:exported="false" />
+        <activity
             android:name=".activity_list_chat"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".activity_chat"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".Map"
             android:exported="false" />
@@ -61,7 +64,7 @@
             android:exported="false" />
         <activity
             android:name=".activity_main"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".activity_profile"
             android:exported="false" />
