--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:exported="false" />
         <activity
             android:name=".activity_list_chat"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".activity_chat"
             android:exported="false" />
