--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="ExtraText">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-<<<<<<< HEAD
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -11,7 +11,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
->>>>>>> 0a3234d9a30b3fd94a97fa4e7e8fd636f8ce4dc4
+
+>>>>>> 0a3234d9a30b3fd94a97fa4e7e8fd636f8ce4dc4
 
     <application
         android:allowBackup="true"
@@ -25,8 +26,8 @@
         tools:targetApi="31">
         <activity
             android:name=".activity_bike_list"
-<<<<<<< HEAD
-=======
+        />
+        =======
             android:exported="false" />
         <activity
             android:name=".activity_list_chat"
@@ -36,7 +37,8 @@
             android:exported="false" />
         <activity
             android:name=".Map"
->>>>>>> 0a3234d9a30b3fd94a97fa4e7e8fd636f8ce4dc4
+/>
+>>>>> 0a3234d9a30b3fd94a97fa4e7e8fd636f8ce4dc4
             android:exported="false" />
         <activity
             android:name=".activity_dialog_reservation_bike"
