Add puxar dados dos users

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,7 @@
             android:name=".activity_login"
             android:exported="false" />
         <activity
-            android:name=".activity_main"
+            android:name=".activity_home"
             android:exported="false" />
         <activity
             android:name=".activity_profile"
