--- a/bjc_springboot/src/main/resources/application.yml
+++ b/bjc_springboot/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/binasjc_db
     username: root
-    password: gost
+    password: yun1
   jpa:
     hibernate:
       ddl-auto: update
